Adicionado Create Transaction

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "teamipag/ipag-ship": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -23,6 +24,40 @@
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/ipag-ship.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/stone-webservice-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/zoop-webservice-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/getnet-webservice-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/bin-webservice-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/bradesco-sdk-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/itaushopline-webservice-php.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "git@bitbucket.org:teamipag/sicredi-sdk-php.git"
+        }
+    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
@@ -51,7 +86,7 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
